force-app/main/default/objects/Flow_Scan_Result__c/Flow_Scan_Result__c.object-meta.xml
<CustomObject>
    <label>Flow Scan Result</label>
    <pluralLabel>Flow Scan Results</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Result Number</label>
        <displayFormat>RES-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>