force-app/main/default/objects/Flow_Scan_Result__c/fields/Element_Name__c.field-meta.xml
<CustomField>
    <fullName>Element_Name__c</fullName>
    <label>Element Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>