force-app/main/default/objects/Flow_Scan_Result__c/fields/Flow_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_API_Name__c</fullName>
    <label>Flow API Name</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>