force-app/main/default/objects/Flow_Scan_Result__c/fields/Flow_Definition_Id__c.field-meta.xml
<CustomField>
    <fullName>Flow_Definition_Id__c</fullName>
    <label>Flow Definition Id</label>
    <type>Text</type>
    <length>18</length>
    <description>Salesforce Id of the FlowDefinition record — used to build Flow Builder URL</description>
</CustomField>