force-app/main/default/objects/Flow_Scan_Result__c/fields/Flow_Scan__c.field-meta.xml
<CustomField>
    <fullName>Flow_Scan__c</fullName>
    <label>Flow Scan</label>
    <type>MasterDetail</type>
    <referenceTo>Flow_Scan__c</referenceTo>
    <relationshipName>Flow_Scan_Results</relationshipName>
    <relationshipLabel>Flow Scan Results</relationshipLabel>
</CustomField>