force-app/main/default/objects/Flow_Scan_Result__c/fields/Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>Rule_Name__c</fullName>
    <label>Rule Name</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>